<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">오늘의 자외선</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loding_title">기상청 정보 수집 중..</string>
    <string name="image_title">이미지</string>
    <string name="local_title">알고싶은 지역을 선택하세요</string>
    <string name="widget_local_title"> 위젯의 지역을 선택하세요</string>
    <string name="low_string">위험도 극히 낮음</string>
    <string name="normal_string">태양에 노출 시 위험도는 낮으며,\n자외선 차단제로 보호 필요</string>
    <string name="high_string">태양에 노출 시 위험도는 보통이며,\n어느 정도 보호가 필요함\n자외선 차단제를 충분히 발라야 함</string>
    <string name="warning_string">태양에 노출 시 위험하며,\n노출 된 피부는 몇 분 내에 탈 수 있음\n자외선 차단제를 충분히 발라야 함</string>
    <string name="danger_string">태양에 노출 시 극도로 위험하며,\n노출된 피부는 몇 분 내에 탈 수 있음\n자외선 차단제를 2시간마다 충분히 발라야 함</string>
    <string name="erroepage">오류페이지\n\n
        		1. 네트워크 불안정 오류 \n
	    		2. 기상청 정보제공 오류 \n</string>
    <string name="referText">* 기상청 정보제공 기간이 3월~11월이기 떄문에 오늘의 자외선서비스는 해당 기간 동안만 가능합니다.\n
        * 앱을 재실행해 주시면 감사하겠습니다.\n\n</string>
    <string name="spf">SPF</string>

    <string-array name="strArr">
        <item>나의 현재 위치 검색</item>
        <item>서울특별시</item>
        <item>부산광역시</item>
        <item>대구광역시</item>
        <item>광주광역시</item>
        <item>대전광역시</item>
        <item>인천광역시</item>
        <item>울산광역시</item>
        <item>제주특별자치도</item>
        <item>강원도 춘천시</item>
        <item>강원도 원주시</item>
        <item>강원도 강릉시</item>
        <item>강원도 동해시</item>
        <item>강원도 태백시</item>
        <item>강원도 속초시</item>
        <item>충청남도 천안시</item>
        <item>충청남도 공주시</item>
        <item>충청남도 보령시</item>
        <item>충청남도 아산시</item>
        <item>충청남도 서산시</item>
        <item>충청남도 논산시</item>
        <item>충청남도 계룡시</item>
        <item>충청북도 청주시</item>
        <item>경상남도 진주시</item>
        <item>경상남도 통영시</item>
        <item>경상남도 사천시</item>
        <item>경상남도 김해시</item>
        <item>경상남도 거제시</item>
        <item>경기도 수원시</item>
        <item>경기도 성남시</item>
        <item>경기도 의정부시</item>
        <item>경기도 안양시</item>
        <item>경기도 부천시</item>
        <item>경기도 평택시</item>
        <item>경기도 동두천시</item>
        <item>경기도 안산시</item>
        <item>경기도 고양시</item>
        <item>경기도 과천시</item>
        <item>경기도 구리시</item>
        <item>경기도 남양주시</item>
        <item>경기도 오산시</item>
        <item>경기도 시흥시</item>
        <item>경기도 의왕시</item>
        <item>경기도 하남시</item>
        <item>경기도 용인시</item>
        <item>경기도 파주시</item>
        <item>경기도 이천시</item>
        <item>경기도 안성시</item>
        <item>경기도 김포시</item>
        <item>경기도 화성시</item>
        <item>경기도 광주시</item>
        <item>경기도 양주시</item>
        <item>경기도 포천시</item>
        <item>전라북도 전주시</item>
        <item>전라북도 군산시</item>
        <item>전라북도 익산시</item>
        <item>전라남도 목포시</item>
        <item>전라남도 여수시</item>
        <item>전라남도 순천시</item>
        <item>경상북도 포항시</item>
        <item>경상북도 경주시</item>
        <item>경상북도 안동시</item>
        <item>경상북도 구미시</item>
        <item>경상북도 문경시</item>
        <!-- 64 -->

    </string-array>
    <string-array name="strArrWidget">
        <item>서울특별시</item>
        <item>부산광역시</item>
        <item>대구광역시</item>
        <item>광주광역시</item>
        <item>대전광역시</item>
        <item>인천광역시</item>
        <item>울산광역시</item>
        <item>제주특별자치도</item>
        <item>강원도 춘천시</item>
        <item>강원도 원주시</item>
        <item>강원도 강릉시</item>
        <item>강원도 동해시</item>
        <item>강원도 태백시</item>
        <item>강원도 속초시</item>
        <item>충청남도 천안시</item>
        <item>충청남도 공주시</item>
        <item>충청남도 보령시</item>
        <item>충청남도 아산시</item>
        <item>충청남도 서산시</item>
        <item>충청남도 논산시</item>
        <item>충청남도 계룡시</item>
        <item>충청북도 청주시</item>
        <item>경상남도 진주시</item>
        <item>경상남도 통영시</item>
        <item>경상남도 사천시</item>
        <item>경상남도 김해시</item>
        <item>경상남도 거제시</item>
        <item>경기도 수원시</item>
        <item>경기도 성남시</item>
        <item>경기도 의정부시</item>
        <item>경기도 안양시</item>
        <item>경기도 부천시</item>
        <item>경기도 평택시</item>
        <item>경기도 동두천시</item>
        <item>경기도 안산시</item>
        <item>경기도 고양시</item>
        <item>경기도 과천시</item>
        <item>경기도 구리시</item>
        <item>경기도 남양주시</item>
        <item>경기도 오산시</item>
        <item>경기도 시흥시</item>
        <item>경기도 의왕시</item>
        <item>경기도 하남시</item>
        <item>경기도 용인시</item>
        <item>경기도 파주시</item>
        <item>경기도 이천시</item>
        <item>경기도 안성시</item>
        <item>경기도 김포시</item>
        <item>경기도 화성시</item>
        <item>경기도 광주시</item>
        <item>경기도 양주시</item>
        <item>경기도 포천시</item>
        <item>전라북도 전주시</item>
        <item>전라북도 군산시</item>
        <item>전라북도 익산시</item>
        <item>전라남도 목포시</item>
        <item>전라남도 여수시</item>
        <item>전라남도 순천시</item>
        <item>경상북도 포항시</item>
        <item>경상북도 경주시</item>
        <item>경상북도 안동시</item>
        <item>경상북도 구미시</item>
        <item>경상북도 문경시</item>
    </string-array>

</resources>