<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_layout_behavior"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" >

            <TextView
                android:id="@+id/top_level"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:text="단계"
                android:textColor="#fff"
                android:textSize="13dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center" >

            <TextView
                android:id="@+id/top_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="설명 및 주의사항"
                android:textColor="#fff"
                android:textSize="13dp"
                 />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#555" />

    <!-- 맨위 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/behavior1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="낮음"
                android:textColor="#fff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 - 2"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/low_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/low_string"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#333" />
    <!-- 낮음 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/behavior2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="보통"
                android:textColor="#fff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 - 5"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/normal_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/normal_string"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#333" />
    <!-- 보통 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/behavior3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="높음"
                android:textColor="#fff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6 - 7"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/high_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/high_string"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#333" />
    <!-- 높음 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/behavior4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="위험"
                android:textColor="#fff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8 - 10"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/warning_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/warning_string"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#333" />
    <!-- 위험 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#222"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/behavior5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="매우위험"
                android:textColor="#fff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:gravity="center|left" >

            <TextView
                android:id="@+id/danger_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/danger_string"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 매우위험 -->

</LinearLayout>